Fix new-site-notice spacing after grid-spacing change

--- a/client/scss/components/_new-site-notice.scss
+++ b/client/scss/components/_new-site-notice.scss
@@ -7,7 +7,6 @@ $mega-w-size: 400px;
 .new-site-notice {
   position: relative;
   overflow: hidden;
-  margin-top: -15px; // This moves the bar up snug to the header
 
   .icon {
     width: 2.142857em; //30/14
